crates/math-core/tests/snapshots/conversion_test__equal_at_group_end.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{x=}x"
---
<math>
    <mrow>
        <mi>x</mi>
        <mo rspace="0">=</mo>
    </mrow>
    <mi>x</mi>
</math>
