crates/math-core/tests/snapshots/conversion_test__equal_at_start_of_pseudo_row.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\displaystyle = x"
---
<math>
    <mi>x</mi>
    <mrow displaystyle="true" scriptlevel="0">
        <mo>=</mo>
        <mi>x</mi>
    </mrow>
</math>
