crates/math-core/tests/snapshots/conversion_test__equal_at_start_of_pseudo_row_punct.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: ", \\displaystyle = x"
---
<math>
    <mo>,</mo>
    <mrow displaystyle="true" scriptlevel="0">
        <mo lspace="0">=</mo>
        <mi>x</mi>
    </mrow>
</math>
