crates/math-core/tests/snapshots/conversion_test__equal_before_right.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left(x=\\right)x"
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo rspace="0">=</mo>
        <mo>)</mo>
    </mrow>
    <mi>x</mi>
</math>
