crates/math-core/tests/snapshots/conversion_test__equal_squared.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "==^2 x"
---
<math>
    <mo lspace="0" rspace="0">=</mo>
    <msup>
        <mo lspace="0">=</mo>
        <mn>2</mn>
    </msup>
    <mi>x</mi>
</math>
