crates/math-core/tests/snapshots/conversion_test__equal_subscript_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: (x=_2)
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <msub>
        <mo rspace="0">=</mo>
        <mn>2</mn>
    </msub>
    <mo stretchy="false">)</mo>
</math>
