crates/math-core/tests/snapshots/conversion_test__equal_vectored.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "=\\vec{=}x"
---
<math>
    <mo lspace="0">=</mo>
    <mover accent="true">
        <mo lspace="0" rspace="0">=</mo>
        <mo stretchy="false">⃗</mo>
    </mover>
    <mi>x</mi>
</math>
